# docs/swagger.json
@@ -1769,13 +1769,13 @@
                 "channel": {
                     "type": "string"
                 },
-                "context_path": {
-                    "type": "string"
-                },
                 "form": {
                     "$ref": "#/definitions/internal_workflow_handler.InputFormDTO"
                 },
                 "node_id": {
+                    "type": "string"
+                },
+                "output_property": {
                     "type": "string"
                 }
             }
